[package]
name = "chargrid-roguelike-tutorial-2020"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
chargrid_graphical = "~0.7"
chargrid = "~0.4"
coord_2d = "~0.3"               # representation of 2D int coords and sizes
direction = "~0.18"             # representation of directions
entity_table = "~0.2"
grid_2d = "~0.15"
rand = "~0.8"                   # basic functionality for random number generators
rand_isaac = "~0.3"             # a specific random number generator implementation
rgb24 = "~0.3"                  # representation of 24-bit color
spatial_table = "~0.3"          # bi-directional assoc between entities and 2D grid loc
